# qmenu

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  default.nix  flake.nix  rustfmt.toml  shell.nix
contrib/: qmenu-run
src/: config.rs  icons.rs  main.rs
