[package]
name = "qmenu"
version = "0.1.0"
edition = "2021"
description = "A minimal dmenu/rofi-style launcher for wlr-layer-shell compositors"

[[bin]]
name = "qmenu"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
cosmic-text = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Icon decoding: raster (PNG) via `image`, vector (SVG) via `resvg`.
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"

[profile.release]
opt-level = 2
