[package]
name = "qmenu"
version = "0.1.0"
edition = "2021"
description = "A minimal dmenu/rofi-style launcher for wlr-layer-shell compositors"

[[bin]]
name = "qmenu"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
cosmic-text = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Icon decoding: raster (PNG) via `image`, vector (SVG) via `resvg`.
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"

[profile.release]
opt-level = 2

# Pedantic-by-default linting. `cargo clippy` should come back clean.
[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Cast lints fire constantly in the software renderer where f32<->i32<->u32
# conversions are deliberate and bounded; keeping them would bury real findings.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# Single-char names are the conventional r/g/b/a colour channels here.
many_single_char_names = "allow"
# mul_add / hypot hurt readability and buy no meaningful precision for 8-bit pixels.
suboptimal_flops = "allow"
imprecise_flops = "allow"
# Conflicts with rustc's `unreachable_pub`; we prefer pub(crate) on the API.
redundant_pub_crate = "allow"
# Style preferences that conflict with how this code reads best.
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
